<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:orientation="horizontal"
            android:weightSum="2">

            <ScrollView
                android:id="@+id/id_scrollView_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:src="@drawable/icon" />

                            <TextView
                                android:id="@+id/tvObjctive"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/objective"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/back_end"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/voice_artist"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/testing"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/manager"
                                android:textColor="#000" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <!--      INFO       -->

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="Credits:"
                                android:textAllCaps="true"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/data_analysis"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/ui_ux_graphics"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/team_leader"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/developer"
                                android:textColor="#000" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sdmg" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/conducted"
                            android:textColor="#000"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:src="@drawable/biti" />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:src="@drawable/lt" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:text="@string/copyright"
                            android:textAlignment="center"
                            android:textColor="#7E7777"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>